fix: Game screen button hover horizontal overflow

--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -40,6 +40,7 @@ button {
     padding: 20px 50px 20px 50px;
     font-family: "Clarendon-Regular";
     cursor: pointer;
+    margin-right: 20px;
 }
 
 button:hover {
